force-app/main/default/objects/Lead/fields/Company_City__c.field-meta.xml
<CustomField>
    <fullName>Company_City__c</fullName>
    <description>Company city. Copied to the Company Billing City during conversion.</description>
    <inlineHelpText>Company city. Copied to the Company Billing City during conversion.</inlineHelpText>
    <label>Company City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>