force-app/main/default/objects/Lead/fields/Company_Country__c.field-meta.xml
<CustomField>
    <fullName>Company_Country__c</fullName>
    <description>Company country. Copied to the Company Billing Country during conversion.</description>
    <inlineHelpText>Company country. Copied to the Company Billing Country during conversion.</inlineHelpText>
    <label>Company Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>