force-app/main/default/objects/Lead/fields/Company_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Company_Postal_Code__c</fullName>
    <description>Company postal code. Enter as text to preserve leading zeros. Copied to the Company Billing Zip/Postal Code during conversion.</description>
    <inlineHelpText>Company postal code. Enter as text to preserve leading zeros. Copied to the Company Billing Zip/Postal Code during conversion.</inlineHelpText>
    <label>Company Zip/Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>