force-app/main/default/objects/Lead/fields/Company_State__c.field-meta.xml
<CustomField>
    <fullName>Company_State__c</fullName>
    <description>Company state or province. Copied to the Company Billing State/Province during conversion.</description>
    <inlineHelpText>Company state or province. Copied to the Company Billing State/Province during conversion.</inlineHelpText>
    <label>Company State/Province</label>
    <length>80</length>
    <type>Text</type>
</CustomField>