force-app/main/default/objects/Lead/fields/Company_Street__c.field-meta.xml
<CustomField>
    <fullName>Company_Street__c</fullName>
    <description>Company street address. Kept separate from the contact address and copied to the Company Billing Street during conversion.</description>
    <inlineHelpText>Company street address. Kept separate from the contact address and copied to the Company Billing Street during conversion.</inlineHelpText>
    <label>Company Street</label>
    <type>TextArea</type>
</CustomField>