force-app/main/default/objects/Lead/fields/EIN__c.field-meta.xml
<CustomField>
    <fullName>EIN__c</fullName>
    <description>Company EIN. Enter XX-XXXXXXX (for example, 12-3456789). Copied to the Company during conversion.</description>
    <inlineHelpText>Company EIN. Enter XX-XXXXXXX (for example, 12-3456789). Copied to the Company during conversion.</inlineHelpText>
    <label>EIN</label>
    <length>10</length>
    <type>Text</type>
</CustomField>