force-app/main/default/objects/Lead/fields/Standard_Industry_Code_SIC__c.field-meta.xml
<CustomField>
    <fullName>Standard_Industry_Code_SIC__c</fullName>
    <description>Company SIC code. Enter the four-digit code as text to preserve leading zeros. Copied to the Company during conversion.</description>
    <inlineHelpText>Company SIC code. Enter the four-digit code as text to preserve leading zeros. Copied to the Company during conversion.</inlineHelpText>
    <label>Standard Industry Code (SIC)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>