force-app/main/default/objects/Lead/validationRules/Validate_Eligibility_Start_Month_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Eligibility_Start_Month_Format</fullName>
    <active>false</active>
    <description>Enter the first month of Medicare eligibility in MM/YYYY format (for example, 03/2026).</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Depricated_Eligibility_Start_Date__c)),
    NOT(
        REGEX(
            Depricated_Eligibility_Start_Date__c,
            &quot;^(0[1-9]|1[0-2])\\/(19|20)[0-9]{2}$&quot;
        )
    )
)</errorConditionFormula>
    <errorDisplayField>Depricated_Eligibility_Start_Date__c</errorDisplayField>
    <errorMessage>Enter the first month of Medicare eligibility in MM/YYYY format (for example, 03/2026).</errorMessage>
</ValidationRule>