force-app/main/default/objects/Lead/listViews/Copy_of_Open_Leads_All.listView-meta.xml
<ListView>
    <fullName>Copy_of_Open_Leads_All</fullName>
    <columns>Eligibility_Start_Date__c</columns>
    <columns>Is_Converted__c</columns>
    <columns>Interested_Insurance__c</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Agent__c</columns>
    <columns>FULL_NAME</columns>
    <columns>Korean_Name__c</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.STATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>Qualified,Unqualified</value>
    </filters>
    <filters>
        <field>Interested_Insurance__c</field>
        <operation>notEqual</operation>
        <value>Medicare,Health,Group Health</value>
    </filters>
    <label>Other Leads (P&amp;C, Life)</label>
</ListView>