force-app/main/default/objects/Lead/listViews/Health_Leads.listView-meta.xml
<ListView>
    <fullName>Health_Leads</fullName>
    <columns>Eligibility_Start_Date__c</columns>
    <columns>Is_Converted__c</columns>
    <columns>Agent__c</columns>
    <columns>LEAD.STATUS</columns>
    <columns>FULL_NAME</columns>
    <columns>Korean_Name__c</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.STATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.Health</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>Unqualified,Qualified</value>
    </filters>
    <label>Health Leads (Ind, Group)</label>
</ListView>