force-app/main/default/objects/Lead/listViews/Medicare_Leads.listView-meta.xml
<ListView>
    <fullName>Medicare_Leads</fullName>
    <columns>Eligibility_Start_Date__c</columns>
    <columns>Is_Converted__c</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Agent__c</columns>
    <columns>FULL_NAME</columns>
    <columns>Korean_Name__c</columns>
    <columns>Birthdate__c</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.STATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.Medicare</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>Unqualified,Qualified</value>
    </filters>
    <label>Medicare Leads</label>
</ListView>