force-app/main/default/objects/Lead/listViews/New_Leads.listView-meta.xml
<ListView>
    <fullName>New_Leads</fullName>
    <columns>Interested_Insurance__c</columns>
    <columns>Is_Converted__c</columns>
    <columns>Eligibility_Start_Date__c</columns>
    <columns>Agent__c</columns>
    <columns>FULL_NAME</columns>
    <columns>Korean_Name__c</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.STATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>Unqualified,Qualified</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <label>New Leads</label>
</ListView>